Acrescentado politica de privacidade

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <a href="#sobre">Sobre</a>
                         <a href="#conhecimento">Conhecimento</a>
                         <a href="#contato">Contate-me</a>
+                        <a href="privacidade.html">Privacidade</a>
                         <ul class="sub-dropmenu">Certificados
                             <div class="sub-menu-content">
                                 <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
@@ -33,6 +34,7 @@
                     <a href="#sobre">Sobre</a>
                     <a href="#conhecimento">Conhecimento</a>
                     <a href="#contato">Contate-me</a>
+                    <a href="privacidade.html">Privacidade</a>
                     <ul class="dropmenu" >Certificados
                         <div class="menu-content" >
                             <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
@@ -54,11 +56,11 @@
                         <a class="aStyle" href="#"><i class="fa-brands fa-instagram"></i></a>
                     </ul>
                     <h1>Marcos Chaves Duarte</h1>
-                    <p>Eu sou Marcos, analista de suporte com anos de experiência. No momento estou estudando programação com foco no Front-end, fique a vontade em ver meu portlofio e meus projetos no github.</p>
+                    <p>Bem vindo ao meu site!</p>
+                    <p>Nele você tem terá acesso a política de privacidade de meus apps e novidades que virão.</p>
                 </div>
                 <div class="about-projects" >
-                    <button>Projetos</button>
-                    <a class="aStyle-b" href="https://wa.me/5567991039674?text=Ola%20gostaria%20de%20falar%20contigo"><i class="fa-brands fa-whatsapp"></i></a>
+                    <button>Meus Apps</button>
                 </div>
             </div>
             <div class="about-image">
