New app privacy

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <a href="#contato">Contate-me</a>
                     <a href="privacidade.html">Privacidade</a>
                     <a href="privacidade2.html">Privacidade Meu IMC</a>
+                    <a href="privacidade3.html">Privacidade Meu IMC</a>
                     <ul class="dropmenu" >Certificados
                         <div class="menu-content" >
                             <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
@@ -58,10 +59,10 @@
                     </ul>
                     <h1>Marcos Chaves Duarte</h1>
                     <p>Bem vindo ao meu site!</p>
-                    <p>Nele você tem terá acesso a política de privacidade de meus apps e novidades que virão.</p>
+                    <p>Fique a vontade para acessar a política de privacidade de meus apps, conhece-los e saber de novidades que virão.</p>
                 </div>
                 <div class="about-projects" >
-                    <button>Meus Apps</button>
+                    <a href="https://play.google.com/store/apps/developer?id=Marcosduartedev">Meus Apps</a>
                 </div>
             </div>
             <div class="about-image">
@@ -87,30 +88,30 @@
                 <div class="flip-container">
                     <div class="flipper">
                         <div class="front">
-                            <span class="card">CSS</span>
+                            <span class="card">Lista de Compras</span>
                         </div>
                         <div class="back">
-                            <span class="card">Teste</span>
+                            <span class="card"> <a href="https://play.google.com/store/apps/details?id=com.marcoschavesd.listacompras"></a>Teste</span>
                         </div>
                     </div>
                 </div>
                 <div class="flip-container">
                     <div class="flipper">
                         <div class="front">
-                            <span class="card">JavaScript</span>
+                            <span class="card">Em breve</span>
                         </div>
                         <div class="back">
-                            <span class="card">Teste</span>
+                            <span class="card">Em breve</span>
                         </div>
                     </div>
                 </div>
                 <div class="flip-container">
                     <div class="flipper">
                         <div class="front">
-                            <span class="card">SQL</span>
+                            <span class="card">Em breve</span>
                         </div>
                         <div class="back">
-                            <span class="card">Teste</span>
+                            <span class="card">Em breve</span>
                         </div>
                     </div>
                 </div>
