--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <a href="#sobre">Sobre</a>
                     <a href="#conhecimento">Conhecimento</a>
                     <a href="#contato">Contate-me</a>
-                    <a href="privacidade.html">Privacidade</a>
+                    <a href="privacidade.html">Privacidade Lista de Compras</a>
                     <a href="privacidade2.html">Privacidade Meu IMC</a>
-                    <a href="privacidade3.html">Privacidade Meu IMC</a>
+                    <a href="privacidade3.html">Privacidade Meu Bloquinho</a>
                     <ul class="dropmenu" >Certificados
                         <div class="menu-content" >
                             <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
