--- a/index.html
+++ b/index.html
@@ -1,154 +1,270 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Pagina</title>
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="stylesheet" href="./src/styleMobile.css">
-    <script src="https://kit.fontawesome.com/e7141edab5.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfólio de Marcos Chaves Duarte - desenvolvedor e criador de apps.">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Apps, Portfólio">
+  <meta name="author" content="Marcos Chaves Duarte">
+  <title>Portfólio - Marcos Chaves Duarte</title>
+  <link rel="icon" href="./src/img/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e7141edab5.js" crossorigin="anonymous"></script>
+  <style>
+    :root {
+      --primary: #4CAF50;
+      --secondary: #2C3E50;
+      --accent: #FFC107;
+      --background: #F9F9F9;
+      --text: #333;
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: var(--background);
+      color: var(--text);
+      line-height: 1.6;
+    }
+    a { text-decoration: none; color: var(--primary); transition: color 0.3s ease; }
+    a:hover { color: var(--accent); }
+    header {
+      background: var(--secondary);
+      color: #fff;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .nav-desk a { margin: 0 10px; color: #fff; font-weight: 500; }
+    .nav-mobile { display: none; cursor: pointer; }
+    .menu-content {
+      display: none;
+      background: var(--secondary);
+      padding: 10px;
+      opacity: 0;
+      transform: translateY(-10px);
+      transition: all 0.3s ease;
+    }
+    .menu-content.active {
+      display: block;
+      opacity: 1;
+      transform: translateY(0);
+    }
+    .menu-content a { display: block; margin: 5px 0; color: #fff; }
+    @media (max-width: 768px) {
+      .nav-desk { display: none; }
+      .nav-mobile { display: block; color: #fff; }
+    }
+    .about {
+      display: flex; flex-wrap: wrap; padding: 2rem;
+      align-items: center; justify-content: center;
+    }
+    .about-text { flex: 1; min-width: 300px; padding: 1rem; }
+    .about-image img {
+      max-width: 250px; border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    .knowledge { padding: 2rem; text-align: center; }
+    .know-card {
+      display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;
+    }
+    .card {
+      background: var(--primary); color: #fff;
+      padding: 1rem 2rem; border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .card:hover { transform: scale(1.05); background: var(--accent); color: var(--secondary); }
+    .contate {
+      display: flex; flex-wrap: wrap; padding: 2rem;
+      background: #fff; border-top: 2px solid var(--primary);
+    }
+    .form { flex: 1; min-width: 300px; padding: 1rem; }
+    .form input, .form textarea {
+      width: 100%; padding: 10px; margin: 8px 0;
+      border: 1px solid #ccc; border-radius: 5px;
+    }
+    .form button {
+      background: var(--primary); color: #fff; border: none;
+      padding: 10px 20px; border-radius: 5px; cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .form button:hover { background: var(--accent); color: var(--secondary); }
+    footer {
+      background: var(--secondary); color: #fff;
+      text-align: center; padding: 1rem;
+    }
+    footer a { color: #fff; margin: 0 5px; }
+
+    .apps-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.app-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 1rem;
+  text-align: center;
+  width: 220px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+.app-card:hover {
+  transform: translateY(-5px);
+}
+
+.app-card img {
+  max-width: 150px;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+}
+
+.app-card h3 {
+  margin-bottom: 0.5rem;
+  color: var(--secondary);
+}
+
+.app-card a {
+  display: inline-block;
+  margin-top: 0.5rem;
+  padding: 8px 12px;
+  background: var(--primary);
+  color: #fff;
+  border-radius: 5px;
+  transition: background 0.3s ease;
+}
+
+.app-card a:hover {
+  background: var(--accent);
+  color: var(--secondary);
+}
+  </style>
 </head>
 <body>
-    <main class="container">
-        <header>
-            <div class="nav-mobile">
-                <ul class="dropmenu"><i class="fa-solid fa-bars"></i>
-                    <div class="menu-content">
-                        <a href="#sobre">Sobre</a>
-                        <a href="#conhecimento">Conhecimento</a>
-                        <a href="#contato">Contate-me</a>
-                        <a href="privacidade.html">Privacidade</a>
-                        <ul class="sub-dropmenu">Certificados
-                            <div class="sub-menu-content">
-                                <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
-                                <a href="https://www.linkedin.com/learning/certificates/54da6496f4efd6e2c6495f7ac5d4839851c38cdce1dd4a4114f5625c78f3fc2b?li_theme=dark" target="_blank">HTML</a>
-                            </div>
-                        </ul>
-                    </div>
-                </ul>
-            </div>
-            <nav class="nav-desk">
-                <i class="fa-solid fa-mug-saucer"></i>
-                <div class="nav-desk-items">
-                    <a href="#sobre">Sobre</a>
-                    <a href="#conhecimento">Conhecimento</a>
-                    <a href="#contato">Contate-me</a>
-                    <a href="privacidade.html">Privacidade Lista de Compras</a>
-                    <a href="privacidade2.html">Privacidade Meu IMC</a>
-                    <a href="privacidade3.html">Privacidade Meu Bloquinho</a>
-                    <ul class="dropmenu" >Certificados
-                        <div class="menu-content" >
-                            <a href="https://www.linkedin.com/learning/certificates/80cf587562f0e16bcf4287b3bdfe3356653a5900cb99ed984345bf311644644b?trk=share_certificate&li_theme=dark" target="_blank">CSS</a>
-                            <a href="https://www.linkedin.com/learning/certificates/54da6496f4efd6e2c6495f7ac5d4839851c38cdce1dd4a4114f5625c78f3fc2b?li_theme=dark" target="_blank">HTML</a>
-                        </div>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <div class="about" id="sobre">
-            <div class="about-text">
-                <div class="about-presentation">
-                    <ul>
-                        <a class="aStyle" href="https://www.linkedin.com/in/marcos-chaves-duarte-47098067/">
-                        <i class="fa-brands fa-linkedin-in"></i></a>
-                        <a class="aStyle" href="https://github.com/Marcoschavesd">
-                        <i class="fa-brands fa-github"></i></a>
-                        <a class="aStyle" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a class="aStyle" href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </ul>
-                    <h1>Marcos Chaves Duarte</h1>
-                    <p>Bem vindo ao meu site!</p>
-                    <p>Fique a vontade para acessar a política de privacidade de meus apps, conhece-los e saber de novidades que virão.</p>
-                </div>
-                <div class="about-projects" >
-                    <a href="https://play.google.com/store/apps/developer?id=Marcosduartedev">Meus Apps</a>
-                </div>
-            </div>
-            <div class="about-image">
-                <img src="./src/img/perfil.png" alt="Perfil">
-            </div>
+  <header>
+    <div class="nav-mobile">
+      <i class="fa-solid fa-bars"></i>
+      <div class="menu-content">
+        <a href="#sobre">Sobre</a>
+        <a href="#conhecimento">Conhecimento</a>
+        <a href="#contato">Contate-me</a>
+        <a href="privacidade.html">Privacidade</a>
+      </div>
+    </div>
+    <nav class="nav-desk">
+      <i class="fa-solid fa-mug-saucer"></i>
+      <div class="nav-desk-items">
+        <a href="#sobre">Sobre</a>
+        <a href="#conhecimento">Conhecimento</a>
+        <a href="#contato">Contate-me</a>
+        <a href="privacidade.html">Privacidade</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="about" id="sobre">
+      <div class="about-text">
+        <h1>Marcos Chaves Duarte</h1>
+        <p>Bem-vindo ao meu site! Aqui você encontra meus projetos, apps e certificados.</p>
+        <div>
+          <a href="https://www.linkedin.com/in/marcos-chaves-duarte-47098067/" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://github.com/Marcoschavesd" aria-label="Github"><i class="fa-brands fa-github"></i></a>
+          <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <div class="knowledge" id="conhecimento">
-            <div class="knowledge-title">
-                <h2>Conhecimento</h2>
-                <h3>Linguagens e outros</h3>
-            </div>
-            <div class="know-card">
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front">
-                            <span class="card">HTML</span>
-                        </div>
-                        <div class="back">
-                            <span class="card">Teste</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front">
-                            <span class="card">Lista de Compras</span>
-                        </div>
-                        <div class="back">
-                            <span class="card"> <a href="https://play.google.com/store/apps/details?id=com.marcoschavesd.listacompras"></a>Teste</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front">
-                            <span class="card">Em breve</span>
-                        </div>
-                        <div class="back">
-                            <span class="card">Em breve</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front">
-                            <span class="card">Em breve</span>
-                        </div>
-                        <div class="back">
-                            <span class="card">Em breve</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="contate" id="contato">
-            <div class="form-image">
-                <img src="./src/img/form.svg" alt="Ilustração">
-            </div>
-            <div class="form">
-                <h2>Contate-me</h2>
-                <form method="post" autocomplete="off">
-                    <label>Nome</label>
-                    <input type="text" id="name"  placeholder="Digite seu nome">
-                    <label>Email</label>
-                    <input type="email" id="email" placeholder="Digite seu email">
-                    <label>Telefone</label>
-                    <input type="number" id="tel" placeholder="Digite seu telefone">
-                    <label>Assunto</label>
-                    <input type="text" id="assunto" placeholder="Assunto">
-                    <label>Mensagem</label>
-                    <textarea id="mensagem"></textarea>
-                    <button class="aStyle" type="submit"><i class="fa-regular fa-paper-plane"></i></button>
-                </form>
-            </div>
-        </div>
-        <footer>
-            <span>Desenvolvido por Marcos C Duarte</span>
-            <ul>
-                <a class="aStyle" href="https://www.linkedin.com/in/marcos-chaves-duarte-47098067/">
-                <i class="fa-brands fa-linkedin-in"></i></a>
-                <a class="aStyle" href="https://github.com/Marcoschavesd">
-                <i class="fa-brands fa-github"></i></a>
-                <a class="aStyle" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a class="aStyle" href="#"><i class="fa-brands fa-instagram"></i></a>
-            </ul>
-        </footer>
-    </main>    
+      </div>
+      <div class="about-image">
+        <img src="./src/img/perfil.png" alt="Foto de Marcos Chaves Duarte">
+      </div>
+    </section>
+
+<section class="knowledge" id="conhecimento">
+  <h2>Meus Aplicativos</h2>
+  <div class="apps-grid">
+    
+    <!-- App 1 -->
+    <div class="app-card">
+      <img src="./src/img/app1.png" alt="Imagem do App Lista de Compras">
+      <h3>Lista de Compras</h3>
+      <a href="https://play.google.com/store/apps/details?id=com.marcoschavesd.listacompras" target="_blank">
+        📥 Download
+      </a>
+    </div>
+
+    <!-- App 2 -->
+    <div class="app-card">
+      <img src="./src/img/app2.png" alt="Imagem do App Meu IMC">
+      <h3>Meu IMC</h3>
+      <a href="https://play.google.com/store/apps/details?id=com.marcoschavesd.meuimc" target="_blank">
+        📥 Download
+      </a>
+    </div>
+
+    <!-- App 3 -->
+    <div class="app-card">
+      <img src="./src/img/app3.png" alt="Imagem do App Bloquinho de Notas">
+      <h3>Meu Bloquinho</h3>
+      <a href="https://play.google.com/store/apps/details?id=com.marcoschavesd.bloquinho" target="_blank">
+        📥 Download
+      </a>
+    </div>
+
+    <!-- Template para novos apps -->
+    <div class="app-card">
+      <img src="./src/img/app-template.png" alt="Imagem do App">
+      <h3>Nome do App</h3>
+      <a href="LINK_DO_DOWNLOAD" target="_blank">
+        📥 Download
+      </a>
+    </div>
+
+  </div>
+</section>
+
+    <section class="contate" id="contato">
+      <div class="form">
+        <h2>Contate-me</h2>
+        <form action="https://formspree.io/f/{seu-endpoint}" method="POST">
+          <label for="name">Nome</label>
+          <input type="text" id="name" name="name" placeholder="Digite seu nome" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Digite seu email" required>
+          <label for="tel">Telefone</label>
+          <input type="tel" id="tel" name="tel" placeholder="Digite seu telefone">
+          <label for="assunto">Assunto</label>
+          <input type="text" id="assunto" name="assunto" placeholder="Assunto">
+          <label for="mensagem">Mensagem</label>
+          <textarea id="mensagem" name="message" rows="5" placeholder="Digite sua mensagem"></textarea>
+          <button type="submit"><i class="fa-regular fa-paper-plane"></i> Enviar</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <span>Desenvolvido por Marcos C Duarte</span>
+    <div>
+      <a href="https://www.linkedin.com/in/marcos-chaves-duarte-47098067/"><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href="https://github.com/Marcoschavesd"><i class="fa-brands fa-github"></i></a>
+      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+  </footer>
+
+  <!-- 🔑 Script para menu mobile -->
+  <script>
+    const menuBtn = document.querySelector('.fa-bars');
+    const menuContent = document.querySelector('.menu-content');
+
+    menuBtn.addEventListener('click', () => {
+      menuContent.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
